--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,26 @@
 </head>
 
 <body>
+  <div class="form-wrap">
+    <form class="search-form" id="search-form">
+      <input class="searchTerm" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <button type="submit" class="searchButton">
+        <svg class="search-icon" width="50" height="50">
+          <use href="/src/images/symbol-defs.svg#icon-icons8-search"></use>
+        </svg>
+      </button>
+    </form>
+  </div>
 
+  <div class="gallery">
+    <!-- Карточки изображений -->
+  </div>
+
+  <button type="submit" class="load-more button btn-primary" data-action="load-more">
+
+    <span class="spinner-border spinner-border-sm spinner is-hidden" role="status" aria-hidden="true"></span>
+    <span class="label">Load more</span>
+  </button>
 
   <script src="index.js" type="module"></script>
 </body>
